--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <tr>
         <!-- <th  align="left" scope="col">Title</th>
 		<th  align="left" scope="col">Body</th> -->
-		<td>Login name</td>
+		<td>User name</td>
 		<td><input type="text" name="login" value=""></td>
       </tr>
 	   <tr>
@@ -51,7 +51,7 @@ module.Doit = function(resultObject){
 			accept:"application/json",
 			//url : "http://api.geonames.org/citiesJSON?north=44.1&south=-9.9&east=-22.4&west=55.2&lang=de&username=demo",
 			//url : "http://rest-service.guides.spring.io/greeting",
-			url :"http://jsonplaceholder.typicode.com/posts/1",
+			url :"http://epvmrh6.americas.hpqcorp.net/is-bin/INTERSHOP.enfinity/WFS/HP-ePrime-Site/en_US/-/USD/ViewLogin-ProcessForm",
 			//url : "http://services.groupkt.com/country/get/iso2code/IN",
 			crossDomain:true,
 			type : "GET",
