--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<td>Password</td>
 		<td><input type="password" name="password" value=""></td>
       </tr>
-	  <tr><td><input type="submit" name="Login" value="Login"></td></tr>
+	  <tr><td><input type="submit" name="Login" id="loginBtn" value="Login"></td></tr>
       
     </table>
   </div>
@@ -33,7 +33,7 @@
 
 <script>
 $("#results").hide();
-$('#submit').click(function(){
+$('#loginBtn').click(function(){
 SUBMIT.Doit($('#results'));
 });
 
