--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- Content Session Section -->
    <div class="content-right-section left-nav-space screen" id='results'>
-    <h1 class="page-title">Status Details</h1>
+    <h1 class="page-title">Login to B2B store</h1>
 	<table width="100%" border='0' id="SSessions">
       <tr>
         <!-- <th  align="left" scope="col">Title</th>
@@ -31,7 +31,7 @@
 <script src="js/jQuery.js"></script>
 
 <script>
-$("#results").hide();
+
 $('#loginBtn').click(function(){
 SUBMIT.Doit($('#results'));
 });
