--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
 <script src="js/jQuery.js"></script>
 
 <script>
-
+$("#results").show();
 $('#loginBtn').click(function(){
 SUBMIT.Doit($('#results'));
 });
 
-$("#clear").click(function(){
-  $("#results").hide();
-});
+
 
 
 var SUBMIT = (function(module) {
