--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var SUBMIT = (function(module) {
 module.Doit = function(resultObject){
 
 	$.ajax({
-   url: "http://epvmrh6.americas.hpqcorp.net/is-bin/INTERSHOP.enfinity/WFS/HP-ePrime-Site/en_US/-/USD/ViewLogin-ProcessForm",
+   url: "http://echo.jsontest.com/insert-key-here/insert-value-here/key/value",
    dataType: 'application/json',
        complete: function (xhr, status) {
     if (status === 'error' || !xhr.responseText) {
